Update WebSocketService
Changed url to use ws prefix

Fixed a bug I introduced when passing JwtUtil.getAuthorizationValue as token to the connect method, which effectively added redundant 'Bearer' word and caused exceptions in the backend

While debugging it I moved the topic subscription to only occur when the web socket connection is opened